--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -14,7 +14,7 @@
 
   <!--import bootstap datetimepricker plugin-->
   <link rel="stylesheet" href="../css/bootstrap-datetimepicker.min.css">
-  <script type="text/javascript" src="../js/moment.js"></script>
+  <script type="text/javascript" src="../js/moment-with-locales.js"></script>
   <script type="text/javascript" src="../js/bootstrap-datetimepicker.js"></script>
 
   <!--import bootstrap selectize plugin-->
@@ -108,11 +108,11 @@
 
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-              <form class="navbar-form navbar-left" role="search">
+              <form class="navbar-form navbar-left" onsubmit="return false;">
                 <div class="form-group">
-                  <input type="text" class="form-control"/>
+                  <input type="text" class="form-control" id="searchContent"/>
                 </div>
-                <button type="submit" class="btn btn-default">查询</button>
+                <button type="button" class="btn btn-default" id="searchButton", onclick="searchDefect();">查询</button>
               </form>
             </li>
             <li>
@@ -139,7 +139,8 @@
       $(function () {
         $('#datetimepicker1').datetimepicker(
           {
-            format: 'YYYY-MM-DD'
+            format: 'YYYY-MM-DD',
+            locale: "zh-CN"
           }
         );
       });
@@ -295,7 +296,7 @@
         "sInfoPostFix": "",
         "sSearch": "搜索:",
         "sUrl": "",
-        "sEmptyTable": "表中数据为空",
+        "sEmptyTable": "无事件记录",
         "sLoadingRecords": "载入中...",
         "sInfoThousands": ",",
         "oPaginate": {
@@ -326,6 +327,11 @@
       return data[0] === defectId
     }, 2).data(newData);
     defectTable.draw();
+  }
+
+  function searchDefect(){
+    var keyword = $("input#searchContent").val();
+    defectTable.search(keyword).draw();
   }
 
   $("#datetimepicker1").on("dp.change", function (e) {
