correct a bug of reading bg file

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -110,7 +110,7 @@
             <li class="dropdown">
               <form class="navbar-form navbar-left" onsubmit="return false;">
                 <div class="form-group">
-                  <input type="text" class="form-control" id="searchContent"/>
+                  <input type="text" class="form-control" id="searchContent" onchange="searchDefect();"/>
                 </div>
                 <button type="button" class="btn btn-default" id="searchButton", onclick="searchDefect();">查询</button>
               </form>
